--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ env:
 before_install:
 - bash bin/install_bash.sh
 script:
+- $TRAVIS_BUILD_DIR/$RUN_BASH_VERSION/bin/bash --version
 - $TRAVIS_BUILD_DIR/$RUN_BASH_VERSION/bin/bash -e bin/bashtub `find test -name '*_test.sh'`
 - $TRAVIS_BUILD_DIR/$RUN_BASH_VERSION/bin/bash -eu bin/bashtub `find test -name '*_test.sh'`
